--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Musume/Map/Stadium.Stadium
 EditorStartupMap=/Game/Musume/Map/Stadium.Stadium
+GameInstanceClass=/Game/Musume/MusmeGameInstance.MusmeGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
